2011-03-15  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: crash upon "//html//@id" search in elements panel.
        https://bugs.webkit.org/show_bug.cgi?id=56334

        * inspector/InspectorDOMAgent.cpp:
        * inspector/front-end/ElementsTreeOutline.js:

2011-03-15  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: further extension API cleanup (removed inspectedPage, add experimental prefix)
        https://bugs.webkit.org/show_bug.cgi?id=56327

        * inspector/front-end/ExtensionAPI.js:
        (WebInspector.injectedExtensionAPI):
        * inspector/front-end/ExtensionAPISchema.json:

2011-03-15  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: when console.groupEnd calls twice
        https://bugs.webkit.org/show_bug.cgi?id=56114

        Test: inspector/console/console-nested-group.html

        * inspector/ConsoleMessage.h:
        (WebCore::ConsoleMessage::type):
        * inspector/InspectorConsoleAgent.cpp:
        (WebCore::InspectorConsoleAgent::addConsoleMessage): do not coalesce adjacent EndGroup messages.

2011-03-15  Chris Mumford  <chris.mumford@palm.com>

        Reviewed by Adam Barth.

        Initializing several member variables that were not initialized in
        their constructors. These values were all read prior to initialization
        as reported by Valgrind.

        No new tests: No feature additions/removals.

        * accessibility/AccessibilityImageMapLink.cpp:
        (WebCore::AccessibilityImageMapLink::AccessibilityImageMapLink):
        * editing/DeleteSelectionCommand.cpp:
        (WebCore::DeleteSelectionCommand::DeleteSelectionCommand):
        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::HTMLCanvasElement):
        * xml/XPathResult.cpp:
        (WebCore::XPathResult::XPathResult):

2011-03-15  Ben Taylor  <bentaylor.solx86@gmail.com>
