@@ -1,3 +1,15 @@
+2011-03-15  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: expanding/collapsing object shouldn&apos;t affect outer console.group expansion state
+        https://bugs.webkit.org/show_bug.cgi?id=56373
+
+        * inspector/front-end/Section.js:
+        (WebInspector.Section):
+        (WebInspector.Section.prototype.toggleExpanded):
+        (WebInspector.Section.prototype.handleClick): stop click even propagation if it was handled by this section.
+
 2011-03-15  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Yury Semikhatsky.
